--- a/css/main.css
+++ b/css/main.css
@@ -297,7 +297,7 @@ img {
   transition: opacity var(--main-animation), visibility var(--main-animation);
 }
 
-.modal-btn {
+.modal-close-btn {
   position: absolute;
   top: 8px;
   right: 8px;
@@ -312,6 +312,85 @@ img {
   border-radius: 50%;
   background-color: transparent;
   cursor: pointer;
+}
+.modal-form {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.modal-header {
+  margin-left: 40px;
+  margin-right: 40px;
+  padding-bottom: 0;
+  margin-top: 40px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+}
+.speaker-form {
+  margin-right: 40px;
+  margin-left: 40px;
+  margin-top: 12px;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.comment.form-field {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.comment.form-input {
+  resize: none;
+}
+
+.form-label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 4px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 0.86;
+  letter-spacing: 0.01em;
+
+  color: #757575;
+}
+
+.form-input {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 12px;
+}
+
+.modal-policy {
+  margin-left: 52px;
+}
+
+.label-checkbox {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: #757575;
 }
 
 /*
