--- a/css/main.css
+++ b/css/main.css
@@ -219,7 +219,8 @@ img {
   letter-spacing: 0.06em;
 }
 
-.hero-cont {
+.hero-cont,
+.modal-form .btn {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -236,7 +237,8 @@ img {
 }
 
 .hero .btn,
-.form-footer .btn {
+.form-footer .btn,
+.modal-form .btn {
   border-radius: 4px;
   padding: 10px 32px;
   background-color: #2196f3;
@@ -316,17 +318,19 @@ img {
 .modal-form {
   display: flex;
   flex-direction: column;
+
   position: absolute;
   width: 100%;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  margin-bottom: 40px;
 }
-.modal-header {
+.speaker-title {
   margin-left: 40px;
   margin-right: 40px;
   padding-bottom: 0;
-  margin-top: 40px;
+
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
@@ -344,19 +348,23 @@ img {
 }
 
 .form-field {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
 }
 .comment.form-field {
+  height: 138px;
   margin-top: 20px;
   margin-bottom: 30px;
 }
 .comment.form-input {
   resize: none;
+  padding: 12px 16px;
 }
 
 .form-label {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin-bottom: 4px;
@@ -373,13 +381,30 @@ img {
 .form-input {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  padding-top: 11px;
-  padding-bottom: 11px;
-  padding-left: 12px;
 }
 
+.form-input:hover,
+.form-input:focus {
+  outline: none;
+}
+.modal-form .icon {
+  display: inline-block;
+  position: absolute;
+  top: 11px;
+  left: 12px;
+  transform: translateY(-50%);
+
+  width: 18px;
+  height: 18px;
+  /* padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 12px; */
+
+  fill: var(--title-txt-cl);
+}
 .modal-policy {
   margin-left: 52px;
+  margin-bottom: 30px;
 }
 
 .label-checkbox {
@@ -391,6 +416,11 @@ img {
   letter-spacing: 0.03em;
 
   color: #757575;
+}
+
+.modal-form .btn {
+  padding-left: 56px;
+  padding-right: 55px;
 }
 
 /*
@@ -798,24 +828,26 @@ img {
   background-size: contain;
 }
 
-.form-footer .text {
+.form-request .text {
   display: flex;
   align-items: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 16px;
+  padding-right: 295px;
+
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
 
+  background-color: #2f303a;
   color: rgba(255, 255, 255, 0.6);
-}
 
-/* .form-request {
-  width: 358px;
-  height: 50px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 16px;
-  padding-right: 295px; 
-}*/
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
 
 /* 
 Portfolio
